2020-12-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve &, |, ^ by integer constant expression, merge ^ and ~.

2020-11-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c,
	  device/include/Makefile.in,
	  device/include/rab,
	  .version:
	  Migrate Rabbit headers from OpenRabbit to SDCC.

2020-11-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c:
	  Change Rabbit default data location to 0xa000.

2020-11-27 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Update links to upstream ASxxxx, patch by Warner Losh.

2020-11-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Unify ~,^.

2020-11-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve handling of rematerialized stack locations in +,-.
	* src/stm8/peeph.def:
	  Improve negation of carry result.

2020-11-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c:
	  Enable non-zero right GET_VALUE_AT_ADDRESS operand for tlcs90.
	* src/SDCClospre.cc:
	  Enable speculative division for pdk in lospre (though pdk does not use lospre yet).

2020-11-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/pic14/glue.c:
	  --code-loc support for pic14, patch by Georgi Georgiev.

2020-11-10 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/sim.src/mem.cc:
	  Fix spelling in debug message.
	  sim/ucsim/doc/index.html:
	  Reencode to UTF-8.

2020-11-04 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-3141.c:
	  Disable test for mcs51 due to bug #3146.

2020-11-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  support/regression/tests/bug-3141.c:
	  Fix bug #3141.
	* src/z80/gen.c,
	  support/regression/tests/shifts2.c:
	  Fix bug #3142.

2020-11-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c:
	  Disable array initalizer support for gbz80 in trunk, so the remining issues can be worked out in a branch instead.

2020-10-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #3134.