@@ -289,6 +289,8 @@ enum {
   W_SHIFT_NEGATIVE              = 259, /* shift by negative amount */
   W_INVALID_STACK_LOCATION      = 260, /* access to invalid stack location */
   W_BINARY_INTEGER_CONSTANT_C23 = 261, /* binary integer constant requires ISO C23 or later */
+  E_U8CHAR_STRING_C11           = 262, /* unicode string literal requires ISO C 11 or later */
+  W_PREFIXED_STRINGS            = 263, /* sequence of differently prefixed string literals */
   
   /* don't touch this! */
   NUMBER_OF_ERROR_MESSAGES             /* Number of error messages */
